tests/models/struct/unnamed/bool/fail/max_length.rs
use dade::model;
#[model]
struct TestModel (
   #[field(max_length = 2)]
    bool
);
fn main() {}
